[project]
name = "diy-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "rich>=14.3.3",
    "spacy>=3.8.11",
    "torch>=2.10.0",
    "typer>=0.24.1",
    "wandb>=0.25.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
